--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -13,9 +13,12 @@ nav.navbar.navbar-expand-lg {
 main {
   height: 82vh;
 }
+p {
+  padding: 0;
+  margin: 0;
+}
 .active {
-  background: red center bottom no-repeat;
-
+  background: rgb(16, 68, 56) center bottom no-repeat;
 }
 a.nav-link {
   color: white !important;
@@ -54,4 +57,28 @@ footer {
   padding: 20px 0px;
   display: flex;
   justify-content: space-between;
+}
+
+/* About-hero css */
+
+.about-bg {
+  background-position: center top;
+  background-repeat: no-repeat;
+  background-size: cover;
+  height: 600px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  overflow: hidden;
+  background-color: rgba(0, 0, 0, 0.7);
+  background-blend-mode: soft-light;
+}
+.about-bg h1 {
+  font-size: 55px;
+  color: white;
+  text-transform: uppercase;
+}
+.about-bg p {
+  font-size: 18px;
+  color: gray;
 }
